...
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#3000FF87"
            android:paddingHorizontal="8dp"
            android:paddingVertical="2dp"
            android:text="h(x)=0.85"
            android:textColor="#00FF87"
            android:textSize="10sp" />

    </LinearLayout>

    <LinearLayout
...
